# abbott

./: .copier-answers.yml  .gitignore  README.md  pyproject.toml
.github/workflows/: build_and_test.yml
examples/: run_new_registration.py  run_registration.py  workflow-export-multiplexing_3d-1752593782002.json
src/abbott/: __FRACTAL_MANIFEST__.json  __init__.py
src/abbott/dev/: create_manifest.py  task_list.py
src/abbott/fractal_tasks/: apply_channel_registration_elastix.py  apply_registration_elastix.py  apply_registration_elastix_old.py  apply_registration_elastix_per_ROI.py  apply_registration_warpfield.py  cellvoyager_compute_omezarr.py  cellvoyager_to_ome_zarr_init_extend_multiplex.py  compute_channel_registration_elastix.py  compute_registration_elastix.py  compute_registration_elastix_old.py  compute_registration_elastix_per_ROI.py  compute_registration_warpfield.py  convert_abbottlegacyh5_to_omezarr_compute.py  convert_abbottlegacyh5_to_omezarr_init.py  init_registration_hcs.py  init_select_acquisition_round.py  seeded_segmentation.py  stardist_segmentation.py  upsample_label_image.py
src/abbott/io/: conversions.py  itk_image.py
tests/: __init__.py  conftest.py  test_channel_registration_workflow.py  test_conversion_omezarr.py  test_extend_multiplex_workflow.py  test_registration_workflow.py  test_segmentation_workflow.py  test_thresholding_label_task.py  test_upsample_label_image.py  test_valid_args_schemas.py
tests/data/: bspline_lvl2.txt  default.yml  params_affine.txt  params_rigid.txt  params_similarity_level1.txt  params_translation_level0.txt
(+25 files in other folders)
